# gst-subprocess-pipe

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/: basic_pipeline.rs  ffmpeg_pipe.rs  ffmpegsub.rs  simple_pipeline.rs
src/: lib.rs
src/videopipesink/: imp.rs  mod.rs
tests/: advanced_tests.rs  element_test.rs
