[package]
name = "gst-subprocess-pipe"
description = "GStreamer plugin for subprocess pipe operations"
authors = ["Rafael Caricio <rafael@caricio.com>"]
repository = "https://github.com/rafaelcaricio/gst-subprocess-pipe"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = ["crates-io"]
rust-version = "1.83.0"

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_22"] }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
once_cell = "1.20.2"
libc = "0.2"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
bytes = "1.5.0"
thiserror = "2"
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
lto = "thin"
opt-level = 3
debug = true
panic = "unwind"

[profile.dev]
opt-level = 1
lto = "off"

[lib]
name = "gstsubprocesspipe"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8.1"

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[[example]]
name = "ffmpegsub"
path = "examples/ffmpegsub.rs"
